--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+/* @import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,500;9..40,700&family=Nunito:wght@400;500;700&family=Oswald:wght@400;500;700&display=swap'); */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+
+/* @layer base {
+   li {
+    @apply px-4;
+    @apply cursor-pointer;
+   }
+} */
+
+/* 
+@layer{
+    body {
+        color:white;
+    }
+} */
+
+/* Bien doi mau */
+
+/* @layer{
+    body{
+        @apply text-whiteColor bg-primaryColor tracking-wider font-dmsans
+    }
+} */
